--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: Quickly obtain protein and genetic information from conserved regions of 
     a given protein family from a given species
 Version: 0.1.0
-Author@R: person("Yuan","Zhen",,"yuanzhenlucas@163.com",role = c("aut", "cre"))
-Description:This pipeline allows you to quickly find the gene family of interest to you. 
+Authors@R: person("Yuan","Zhen",email="yuanzhenlucas@163.com",role = c("aut", "cre","ctb"))
+Description: This pipeline allows you to quickly find the gene family of interest to you. 
     Find information about relevant protein sequences and gene sequences from NCBI
     (National Center for Biotechnology Information). 
     It also provides physicochemical properties and evolutionary analysis of proteins 
@@ -16,12 +16,9 @@ Imports:
     tidyverse,
     Biostrings,
     ggrepel,
-    protr,
-    msa,
-    ape
-Depends:
-    R
-URL:
-BugReports:
+    protr
+URL: https://github.com/yuanzhen-lucas/proEvlu
+BugReports: https://github.com/yuanzhen-lucas/proEvlu/issues
 Encoding: UTF-8
-LazyData: true
+LazyData: false
+RoxygenNote: 7.2.1
